--- a/index.html
+++ b/index.html
@@ -34,39 +34,46 @@
         loader.load('app.json', function (text) {
 
             var player = new APP.Player();
-            player.load(JSON.parse(text));
-            player.setSize(window.innerWidth, window.innerHeight);
-            player.play();
-
-            // アニメーションがある場合、ミキサーを作成
-            var mixer; // アニメーションミキサーを定義
-            var clock = new THREE.Clock(); // 時計を作成
-
-            if (player.scene.animations && player.scene.animations.length) {
-                mixer = new THREE.AnimationMixer(player.scene); // シーンを指定
-                player.scene.animations.forEach(function (clip) {
-                    var action = mixer.clipAction(clip);
-                    action.play(); // アニメーションを再生
-                });
-            } else {
-                console.error("No animations found in the object."); // エラーメッセージ
-            }
-
-            document.body.appendChild(player.dom);
-
-            window.addEventListener('resize', function () {
+            player.load(JSON.parse(text)).then(() => {
                 player.setSize(window.innerWidth, window.innerHeight);
+                player.play();
+
+                // player.sceneが正しくロードされているかを確認
+                console.log("Player scene loaded:", player.scene);
+
+                // アニメーションがある場合、ミキサーを作成
+                var mixer; // アニメーションミキサーを定義
+                var clock = new THREE.Clock(); // 時計を作成
+
+                // player.scene.animationsが存在するかチェック
+                if (player.scene && player.scene.animations && player.scene.animations.length) {
+                    mixer = new THREE.AnimationMixer(player.scene); // シーンを指定
+                    player.scene.animations.forEach(function (clip) {
+                        var action = mixer.clipAction(clip);
+                        action.play(); // アニメーションを再生
+                    });
+                } else {
+                    console.error("No animations found in the object."); // エラーメッセージ
+                }
+
+                document.body.appendChild(player.dom);
+
+                window.addEventListener('resize', function () {
+                    player.setSize(window.innerWidth, window.innerHeight);
+                });
+
+                // アニメーションの更新ループを作成
+                function animate() {
+                    requestAnimationFrame(animate); // 次のフレームを要求
+                    var delta = clock.getDelta(); // 経過時間を取得
+                    if (mixer) mixer.update(delta); // ミキサーが存在する場合、アニメーションを更新
+                    player.render(); // シーンを再描画
+                }
+
+                animate(); // アニメーションの開始
+            }).catch(error => {
+                console.error("Error loading player:", error);
             });
-
-            // アニメーションの更新ループを作成
-            function animate() {
-                requestAnimationFrame(animate); // 次のフレームを要求
-                var delta = clock.getDelta(); // 経過時間を取得
-                if (mixer) mixer.update(delta); // ミキサーが存在する場合、アニメーションを更新
-                player.render(); // シーンを再描画
-            }
-
-            animate(); // アニメーションの開始
         });
 
     </script>
