--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     const loader = new GLTFLoader();
     let mixer; // アニメーションミキサーを定義
 
-    loader.load( 'path_to_your_model.glb', function ( gltf ) {
+    loader.load( 'saru_a4.glb', function ( gltf ) {
 
         const model = gltf.scene;
         scene.add( model );
